--- a/sofa.html
+++ b/sofa.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="styles\sofa.css" />
      <link rel="stylesheet" href="/styles/header.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
+    
+    <script
+      src="https://kit.fontawesome.com/d3ed7b5523.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://kit.fontawesome.com/d3ed7b5523.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
+    <header id="header-main-container">
+      <!-- header container  -->
+    </header>
+
+
     <select id="priceSort" onchange="handlePriceSort()">
       <option value="">Price sort</option>
       <option value="high">High to low</option>
@@ -48,6 +59,9 @@
     
   
 </div>
+<footer id="ft-container">
+  <!-- footer container -->
+</footer>
   </body>
 </html>
 
