Product_id added to outdoorProduct & sofa data file
Product_id added to cotdoorProduct & sofa data file and some minor changes

--- a/outdoorProduct.html
+++ b/outdoorProduct.html
@@ -25,24 +25,24 @@
     </header>
 
 
-    <select id="priceSort" onchange="handlerPriceSort()">
+    <select id="priceSort" onchange="handlePriceSort()">
       <option value="">Price sort</option>
       <option value="high">High to low</option>
       <option value="low">Low to High</option>
     </select>
-   
 
 
 
       <div>
         <div id="text974536191" class="text section visual-nav-header ">
-          <h1 style="text-align: center;">DREAM SQUARE ARM<br> </h1>
+          <h1 style="text-align: center;">OUTDOOR COLLECTIONS<br> </h1>
         </div>
-        <p style="text-align: center;">Handcrafted by master upholsterers to be a clean-lined, versatile and supremely
-          comfortable retreat.<br> </p>
+        <p style="text-align: center;">With unrivaled craftsmanship and kick-your-feet-up appeal, our collections make enjoying your great outdoors a breeze.<br> </p>
       </div>
 
     <div id="container">
+
+
 
     </div>
     
@@ -55,5 +55,5 @@
 </html>
 
 
-<script type="module" src="/scripts/sofa.js"></script>
+<script type="module" src="/scripts/outdoorProduct.js"></script>
 
