added anchor tag to furniture.html

--- a/furniture.html
+++ b/furniture.html
@@ -52,7 +52,7 @@
               <span class="left-nav-heading">Living Room Furniture</span>
             </div>
             <ul class="left-ul-nav">
-              <li class="nav-link">Sofa & Sectional Collections</li>
+              <li class="nav-link"><a href="sofa.html">Sofa & Sectional Collections</a></li>
               <li class="nav-link">Sectionals</li>
               <li class="nav-link">Sofas & Loveseats</li>
               <li class="nav-link">Sleeper Sofas</li>
@@ -192,7 +192,7 @@
                   src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202152/1193/img2m.jpg"
                   alt=""
                 />
-                <span>SOFA & SECTIONAL COLLECTIONS</span>
+                <span><a href="sofa.html">Sofa & Sectional Collections</a></span>
               </div>
               <div class="grid-item">
                 <img
