added anchor tag

--- a/furniture.html
+++ b/furniture.html
@@ -188,10 +188,12 @@
             <h2 class="right-heading">LIVING ROOM FURNITURE</h2>
             <div class="container">
               <div class="grid-item">
+               <a href="sofa.html">
                 <img
-                  src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202152/1193/img2m.jpg"
-                  alt=""
-                />
+                src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202152/1193/img2m.jpg"
+                alt=""
+              />
+               </a>
                 <span><a href="sofa.html">Sofa & Sectional Collections</a></span>
               </div>
               <div class="grid-item">
