--- a/outdoor.html
+++ b/outdoor.html
@@ -54,7 +54,7 @@
               >
             </div>
             <ul class="left-ul-nav">
-              <li class="nav-link">Shop All Collections</li>
+              <li class="nav-link"><a href="outdoorProduct.html">Shop All Collections</a></li>
             </ul>
           </div>
           <div class="left-nav-link">
@@ -244,11 +244,13 @@
             <h2 class="right-heading">OUTDOOR FURNITURE COLLECTIONS</h2>
             <div class="container">
               <div class="grid-item">
+               <a href="outdoorProduct.html">
                 <img
-                  src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img39m.jpg"
-                  alt=""
-                />
-                <span class="underline-link">SHOP ALL COLLECTIONS ></span>
+                src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/1109/img39m.jpg"
+                alt=""
+              />
+               </a>
+                <span class="underline-link"><a href="outdoorProduct.html">Shop All Collections</a></span>
               </div>
             </div>
           </div>
