Payement page minor change

--- a/outdoorProduct.html
+++ b/outdoorProduct.html
@@ -25,11 +25,11 @@
     </header>
 
 
-    <select id="priceSort" onchange="handlePriceSort()">
+    <!-- <select id="priceSort" onchange="handlePriceSort()">
       <option value="">Price sort</option>
       <option value="high">High to low</option>
       <option value="low">Low to High</option>
-    </select>
+    </select> -->
 
 
 
