--- a/sofa.html
+++ b/sofa.html
@@ -25,11 +25,11 @@
     </header>
 
 
-    <select id="priceSort" onchange="handlerPriceSort()">
+    <!-- <select id="priceSort" onchange="handlerPriceSort()">
       <option value="">Price sort</option>
       <option value="high">High to low</option>
       <option value="low">Low to High</option>
-    </select>
+    </select> -->
    
 
 
