--- a/src/paymentStatus.html
+++ b/src/paymentStatus.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Status</title>
-    <link rel="stylesheet" href="/styles/paymentStatus.css">
+    <link rel="stylesheet" href="../styles/paymentStatus.css">
 </head>
 <body>
 
@@ -36,7 +36,7 @@ function payment(event) {
     var otpValue=document.querySelector(".otp").value;
     if(otpValue==1234){
         alert("Payment Success, Redirect to Home Page");
-        window.location.href ="index.html";
+        window.location.href ="../index.html";
         localStorage.setItem("cartItems",null)
     }
     else{
