folder structure change

--- a/src/furniture.html
+++ b/src/furniture.html
@@ -709,4 +709,4 @@
     </footer>
   </body>
 </html>
-<script type="module" src="/scripts/furniture.js"></script>
+<script type="module" src="../scripts/furniture.js"></script>
