--- a/src/outdoor.html
+++ b/src/outdoor.html
@@ -817,4 +817,4 @@
     </footer>
 </body>
 </html>
-<script type="module" src="/scripts/furniture.js"></script>
+<script type="module" src="../scripts/furniture.js"></script>
