--- a/src/outdoorProduct.html
+++ b/src/outdoorProduct.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sofa Collection</title>
-    <link rel="stylesheet" href="/styles/sofa.css" />
-     <link rel="stylesheet" href="/styles/header.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="../styles/sofa.css" />
+     <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     
     <script
       src="https://kit.fontawesome.com/d3ed7b5523.js"
@@ -55,5 +55,5 @@
 </html>
 
 
-<script type="module" src="/scripts/outdoorProduct.js"></script>
+<script type="module" src="../scripts/outdoorProduct.js"></script>
 
