--- a/src/cart.html
+++ b/src/cart.html
@@ -17,7 +17,7 @@
     <!---------- Cart Page Start ------------->
     <div class="icon-div">
         <p class="icon">
-          <a href="index.html" class="btn"><i class="fa fa-home"></i></a>  <span> <a href="">Acount</a></span>   
+          <a href="../index.html" class="btn"><i class="fa fa-home"></i></a>  <span> <a href="">Acount</a></span>   
         </p><br>
 
         
@@ -167,7 +167,7 @@
 <script>
 
    </script>
-   <script type="module" src="scripts/cart.js"></script>
+   <script type="module" src="../scripts/cart.js"></script>
        <script src="https://kit.fontawesome.com/74404664ae.js" crossorigin="anonymous"></script>
 
 
