--- a/src/user.html
+++ b/src/user.html
@@ -44,4 +44,4 @@
     </footer>
   </body>
 </html>
-<script type="module" src="/scripts/user.js"></script>
+<script type="module" src="../scripts/user.js"></script>
