--- a/cart.html
+++ b/cart.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/cart.css">
-    <link rel="stylesheet" href="../styles/header.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="/styles/cart.css">
+    <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
    
 </head>
 <body>
@@ -17,7 +17,7 @@
     <!---------- Cart Page Start ------------->
     <div class="icon-div">
         <p class="icon">
-          <a href="../index.html" class="btn"><i class="fa fa-home"></i></a>  <span> <a href="">Acount</a></span>   
+          <a href="index.html" class="btn"><i class="fa fa-home"></i></a>  <span> <a href="">Acount</a></span>   
         </p><br>
 
         
@@ -167,7 +167,7 @@
 <script>
 
    </script>
-   <script type="module" src="../scripts/cart.js"></script>
+   <script type="module" src="scripts/cart.js"></script>
        <script src="https://kit.fontawesome.com/74404664ae.js" crossorigin="anonymous"></script>
 
 
