--- a/outdoor.html
+++ b/outdoor.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/furniture.css" />
-    <link rel="stylesheet" href="../styles/header.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="/styles/furniture.css" />
+    <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
     <script
       src="https://kit.fontawesome.com/d3ed7b5523.js"
       crossorigin="anonymous"
@@ -817,4 +817,4 @@
     </footer>
 </body>
 </html>
-<script type="module" src="../scripts/furniture.js"></script>
+<script type="module" src="/scripts/furniture.js"></script>
