--- a/html/cart.html
+++ b/html/cart.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/cart.css">
-    <link rel="stylesheet" href="/styles/header.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="../styles/cart.css">
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
    
 </head>
 <body>
@@ -167,7 +167,7 @@
 <script>
 
    </script>
-   <script type="module" src="scripts/cart.js"></script>
+   <script type="module" src="../../scripts/cart.js"></script>
        <script src="https://kit.fontawesome.com/74404664ae.js" crossorigin="anonymous"></script>
 
 
