contact page minor changes

--- a/html/contact.html
+++ b/html/contact.html
@@ -139,8 +139,7 @@
         </span>
         </div>
         <fieldset >
-        <input type="image" class="send" src="#" alt="Send" title="Send" "/>
-        <button type="reset"><img src="#" /></button>
+        <button type="reset">Send</button>
         </fieldset>
         </div>
         </form>
